<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/detail_progress"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            tools:context=".ui.DetailActivity">

            <ImageView
                android:id="@+id/detail_thumbnail_iv"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:contentDescription="@string/image_poster_catalogue"
                android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_title_tv"
                app:layout_constraintStart_toEndOf="@id/detail_thumbnail_iv"
                app:layout_constraintTop_toTopOf="@id/detail_thumbnail_iv"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_marginEnd="10dp"
                tools:text="@tools:sample/full_names"
                android:layout_width="0dp"
                android:minLines="3"
                android:maxLines="4"
                android:ellipsize="end"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_genre_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="10dp"
                android:maxLines="4"
                android:ellipsize="end"
                style="@style/TextAppearance.AppCompat.Subhead"
                tools:text="@tools:sample/lorem"
                app:layout_constraintEnd_toEndOf="@+id/detail_title_tv"
                app:layout_constraintStart_toEndOf="@+id/detail_thumbnail_iv"
                app:layout_constraintBottom_toTopOf="@id/detail_year_tv"
                app:layout_constraintTop_toBottomOf="@+id/detail_title_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_year_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                style="@style/TextAppearance.AppCompat.Small"
                tools:text="2019"
                app:layout_constraintEnd_toEndOf="@+id/detail_title_tv"
                app:layout_constraintStart_toEndOf="@+id/detail_thumbnail_iv"
                app:layout_constraintBottom_toTopOf="@id/detail_score_tv"
                android:layout_marginBottom="5dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_score_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:drawableStart="@drawable/ic_round_star_48"
                android:gravity="center"
                tools:text="80%"
                android:drawablePadding="4dp"
                app:layout_constraintBottom_toBottomOf="@id/detail_thumbnail_iv"
                app:layout_constraintStart_toEndOf="@id/detail_thumbnail_iv" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_overview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/TextAppearance.AppCompat.Body1"
                tools:text="@tools:sample/lorem/random"
                app:layout_constraintTop_toBottomOf="@+id/detail_thumbnail_iv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</ScrollView>