<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="action_about">About</string>
    <string name="action_open_source">Open source license</string>

    <string name="movies">MOVIE</string>
    <string name="tv_show">TV SHOW</string>
    <string name="message_data_is_empty">Data is empty.</string>
    <string name="favorit_data_is_empty">Your favorite list is empty.</string>
    <string name="image_poster_catalogue">image poster</string>
    <string name="about_text">Movie Catalogue, a lite app show list movies &amp; tv shows.\n\nDeveloped by:\nZainal Fahrudin\nfnzainal@gmail.com</string>
    <string name="back">Back</string>
    <string name="action_favorite">Favorite</string>
    <string name="discover">Discover</string>
    <string name="title_favorite">Favorite</string>
    <string name="power_connected">Power connected</string>
    <string name="power_disconnected">Power disconnected</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>